; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/unarr/lzmasdk/extr_Ppmd8.c_ShrinkUnits.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/unarr/lzmasdk/extr_Ppmd8.c_ShrinkUnits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_6__*, i8*, i32, i32)* @ShrinkUnits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ShrinkUnits(%struct.TYPE_6__* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @U2I(i32 %13)
  store i32 %14, i32* %10, align 4
  %15 = load i32, i32* %9, align 4
  %16 = call i32 @U2I(i32 %15)
  store i32 %16, i32* %11, align 4
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* %11, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %4
  %21 = load i8*, i8** %7, align 8
  store i8* %21, i8** %5, align 8
  br label %51

22:                                               ; preds = %4
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 0
  %25 = load i64*, i64** %24, align 8
  %26 = load i32, i32* %11, align 4
  %27 = zext i32 %26 to i64
  %28 = getelementptr inbounds i64, i64* %25, i64 %27
  %29 = load i64, i64* %28, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %44

31:                                               ; preds = %22
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %33 = load i32, i32* %11, align 4
  %34 = call i8* @RemoveNode(%struct.TYPE_6__* %32, i32 %33)
  store i8* %34, i8** %12, align 8
  %35 = load i8*, i8** %12, align 8
  %36 = load i8*, i8** %7, align 8
  %37 = load i32, i32* %9, align 4
  %38 = call i32 @MyMem12Cpy(i8* %35, i8* %36, i32 %37)
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %40 = load i8*, i8** %7, align 8
  %41 = load i32, i32* %10, align 4
  %42 = call i32 @InsertNode(%struct.TYPE_6__* %39, i8* %40, i32 %41)
  %43 = load i8*, i8** %12, align 8
  store i8* %43, i8** %5, align 8
  br label %51

44:                                               ; preds = %22
  %45 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %46 = load i8*, i8** %7, align 8
  %47 = load i32, i32* %10, align 4
  %48 = load i32, i32* %11, align 4
  %49 = call i32 @SplitBlock(%struct.TYPE_6__* %45, i8* %46, i32 %47, i32 %48)
  %50 = load i8*, i8** %7, align 8
  store i8* %50, i8** %5, align 8
  br label %51

51:                                               ; preds = %44, %31, %20
  %52 = load i8*, i8** %5, align 8
  ret i8* %52
}

declare dso_local i32 @U2I(i32) #1

declare dso_local i8* @RemoveNode(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @MyMem12Cpy(i8*, i8*, i32) #1

declare dso_local i32 @InsertNode(%struct.TYPE_6__*, i8*, i32) #1

declare dso_local i32 @SplitBlock(%struct.TYPE_6__*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
